# carbin

./: .gitbook.yaml  .gitignore  LICENSE  MANIFEST.in  README.md  appveyor.yml  build_whl.sh  setup.py  tox.ini
carbin/: __init__.py  builder.py  carbin_flags.py  cli.py  cmd.py  creater.py  generate_flags.py  init_cmd.py  package.py  prefix.py  types.py  util.py
carbin/cmake/: boost.cmake
docs/: Makefile  conf.py  index.rst  make.bat
docs/source/: building.rst  conf.py  index.rst  intro.rst  requirements.rst
docs/src/: building.rst  commands.rst  intro.rst  package_src.rst  recipe.rst  requirements.rst
test/: test_carbin.py
test/basicrecipes/: CMakeLists.txt
test/basicrecipes/recipes/simpleflag/: package.txt
test/basicrecipes/recipes/simplemultiflag/: package.txt
test/cmake/: header_cmake_dir.cmake  use_original_cmake.cmake
test/libsimpleflag/: CMakeLists.txt
test/libsimplemultiflag/: CMakeLists.txt
test/toolchains/: toolchainflag.cmake
tools/: generate.py
tools/cmake/: boost.cmake
